--- a/web/index.html
+++ b/web/index.html
@@ -13,9 +13,10 @@
         <p class="text-2xl text-center mt-8 px-12" >API para obtener las portadas de los periódicos más importantes en México</p>
         <span class="text-2xl text-center mt-16" >Rutas disponibles:</span>
         <ul class="text-xl mt-4">
-            <li>- /api/cover?newsPaper={NEWSPAPER}&date={XXXX-XX-XX}</li>
-            <li>- /api/covers/{XXXX-XX-XX}</li>
-            <li>- /api/images/{FILENAME}</li>
+            <li>GET /api/newspapers</li>
+            <li>GET /api/cover?newsPaper={NEWSPAPER}&date={XXXX-XX-XX}</li>
+            <li>GET /api/covers/{XXXX-XX-XX || 'latest'}</li>
+            <li>GET /api/images/{FILENAME}</li>
             <li class="text-center"><br>({XXXX-XX-XX} => {YEAR-MONTH-DAY})</li>
         </ul>
         <a class="bg-gray-900 px-12 py-1 rounded-md mt-24 text-2xl hover:bg-gray-700 transition-colors duration-300 ease-out" href="/">Docs en Postman</a>
