--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" sizes="16x16" href="/favicon.ico">
-    <title>Mercado Libre API</title>
+    <title>News Paper API</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="w-screen bg-gray-800 text-gray-50 font-mono" >
@@ -14,10 +14,10 @@
         <span class="text-2xl text-center mt-16" >Rutas disponibles:</span>
         <ul class="text-xl mt-4">
             <li>GET /api/newspapers</li>
-            <li>GET /api/cover?newsPaper={NEWSPAPER}&date={XXXX-XX-XX}</li>
-            <li>GET /api/covers/{XXXX-XX-XX || 'latest'}</li>
+            <li>GET /api/cover?newsPaper={NEWSPAPER}&date={YYYY-MM-DD}</li>
+            <li>GET /api/covers/{YYYY-MM-DD || 'latest'}</li>
             <li>GET /api/images/{FILENAME}</li>
-            <li class="text-center"><br>({XXXX-XX-XX} => {YEAR-MONTH-DAY})</li>
+            <li class="text-center"><br>({YYYY-MM-DD} => {YEAR-MONTH-DAY})</li>
         </ul>
         <a class="bg-gray-900 px-12 py-1 rounded-md mt-24 text-2xl hover:bg-gray-700 transition-colors duration-300 ease-out" href="/">Docs en Postman</a>
     </main>
