--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
         <p class="text-2xl text-center mt-8 px-12" >API para obtener las portadas de los periódicos más importantes en México</p>
         <span class="text-2xl text-center mt-16" >Rutas disponibles:</span>
         <ul class="text-xl mt-4">
+            <li>GET /api/scrape?newsPaper={NEWSPAPER}&date={YYYY-MM-DD}</li>
             <li>GET /api/newspapers</li>
             <li>GET /api/cover?newsPaper={NEWSPAPER}&date={YYYY-MM-DD}</li>
             <li>GET /api/covers/{YYYY-MM-DD || 'latest'}</li>
